<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/img_shake_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_gempa_magnitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/img_shake_map"
            android:textSize="30sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/img_shake_map"
            tools:text="@string/gempa_magnitude" />

        <TextView
            android:id="@+id/tv_gempa_wilayah"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_gempa_magnitude"
            card_view:layout_constraintStart_toStartOf="@+id/tv_gempa_magnitude"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_gempa_magnitude"
            tools:text="@string/gempa_wilayah" />

        <TextView
            android:id="@+id/tv_gempa_mmi_dirasakan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_gempa_wilayah"
            card_view:layout_constraintStart_toStartOf="@+id/tv_gempa_wilayah"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_gempa_wilayah"
            tools:text="@string/gempa_mmi_dirasakan" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
